Delivery of de-DE: src/res/en-shrinked_de.yml

--- a/src/res/en-shrinked_de.yml
+++ b/src/res/en-shrinked_de.yml
@@ -7,42 +7,42 @@
 '**Duplicate this task in order to track a [...] [Template content 8ceacdaf0df6cc6eca935b268b7469d6]':
   author: ginoreyes
   comment: '[resource: asana_web_app_templates] Wird in von Asana erstellten Vorlagen verwendet - sales_pipeline'
-  value: '**Duplizieren Sie diese Aufgabe, um einen neuen Interessenten zu verfolgen. Um eine Aufgabe zu duplizieren, gehen Sie zum Menü ''...'' und klicken Sie auf ''Aufgabe in Vorlage konvertieren''.** Befolgen Sie 
+  value: '**Duplizieren Sie diese Aufgabe, um einen neuen Interessenten zu verfolgen. Um eine Aufgabe zu duplizieren, gehen Sie zum Menü ''...'' und klicken Sie auf ''Aufgabe in Vorlage konvertieren''. "** Befolgen Sie 
 
 
 dann den Workback-Zeitplan in den Teilaufgaben unten, um sie von einer Gelegenheit zu einem Kunden zu verschieben!'
 '"{projectName}" and {count} other projects will be moved to the References [...]':
   author: lesialiao
   comment: Verwenden Sie die gleiche Übersetzung wie 'Referenzen [Substantiv]'
-  fallback_key: '''{projectName}'' und {count} andere Projekte werden in die unterstützende Arbeit verschoben [...]'
+  fallback_key: '"{projectName}" und {count} andere Projekte werden in die unterstützende Arbeit verschoben [...]'
   locations:
     - asana2/asana/web/goals/views/goal_set_metric_dialog/goal_set_metric_warning_banner.ts
   value:
-    count_one: '''{projectName}'' und {count} anderes Projekt werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden.'
-    count_other: '''{projectName}'' und {count} andere Projekte werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden.'
+    count_one: '"{projectName}" und {count} anderes Projekt werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden.'
+    count_other: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden.'
 '"{projectName}" and {count} other projects will be moved to the References section once your changes are saved. Projects [...]':
   author: lesialiao
   comment: Verwenden Sie die gleiche Übersetzung wie 'Referenzen [Substantiv]'
-  fallback_key: '''{projectName}'' und {count} andere Projekte werden in den Abschnitt Unterstützende Arbeiten verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte'
+  fallback_key: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Unterstützende Arbeiten verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte'
   locations:
     - asana2/asana/web/goals/views/goal_set_metric_dialog/goal_set_metric_warning_banner.ts
   value:
-    count_one: '''{projectName}'' und {count} anderes Projekt werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, zu denen Sie keinen Zugang haben, sind ebenfalls betroffen.'
-    count_other: '''{projectName}'' und {count} andere Projekte werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, zu denen Sie keinen Zugang haben, sind ebenfalls betroffen.'
+    count_one: '"{projectName}" und {count} anderes Projekt werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, auf die Sie keinen Zugriff haben, sind ebenfalls betroffen.'
+    count_other: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, auf die Sie keinen Zugriff haben, sind ebenfalls betroffen.'
 '"{projectName}" and {count} other projects will be moved to the Supporting work [...]':
   author: phillipyu
   locations:
     - asana2/asana/web/goals/views/goal_set_metric_dialog/goal_set_metric_warning_banner.ts
   value:
-    count_one: '''{projectName}'' und {count} anderes Projekt werden in den Abschnitt Unterstützende Arbeit verschoben, sobald Ihre Änderungen gespeichert wurden.'
-    count_other: '''{projectName}'' und {count} andere Projekte werden in den Abschnitt Unterstützende Arbeiten verschoben, sobald Ihre Änderungen gespeichert wurden.'
+    count_one: '"{projectName}" und {count} anderes Projekt werden in den Abschnitt Unterstützende Arbeit verschoben, sobald Ihre Änderungen gespeichert wurden.'
+    count_other: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Unterstützende Arbeiten verschoben, sobald Ihre Änderungen gespeichert wurden.'
 '"{projectName}" and {count} other projects will be moved to the Supporting work section once your changes are saved. Projects [...]':
   author: phillipyu
   locations:
     - asana2/asana/web/goals/views/goal_set_metric_dialog/goal_set_metric_warning_banner.ts
   value:
-    count_one: '''{projectName}'' und {count} anderes Projekt werden in den Abschnitt Unterstützende Arbeit verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, zu denen Sie keinen Zugang haben, sind ebenfalls betroffen.'
-    count_other: '''{projectName}'' und {count} andere Projekte werden in den Abschnitt Unterstützende Arbeiten verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, zu denen Sie keinen Zugang haben, sind ebenfalls betroffen.'
+    count_one: '"{projectName}" und {count} anderes Projekt werden in den Abschnitt Unterstützende Arbeit verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, auf die Sie keinen Zugriff haben, sind ebenfalls betroffen.'
+    count_other: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Unterstützende Arbeiten verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, auf die Sie keinen Zugriff haben, sind ebenfalls betroffen.'
 '"{ruleName}" added to this {variant}':
   author: alexryan
   locations:
@@ -50,10 +50,10 @@ dann den Workback-Zeitplan in den Teilaufgaben unten, um sie von einer Gelegenhe
     - asana2/luna-ui/src/components/dialog/automation/add_automation_dialog_configuration_page.ts
     - asana2/luna-ui/src/components/dialog/automation/automation_mini_rule_builder_configuration.ts
   variants:
-    _default: '''{ruleName}'' hinzugefügt'
-    my_tasks: '''{ruleName}'' zu Meine Aufgaben hinzugefügt'
-    project: '''{ruleName}'' zu diesem Projekt hinzugefügt'
-    project_template: '''{ruleName}'' zu dieser Projektvorlage hinzugefügt'
+    _default: '"{ruleName}" hinzugefügt'
+    my_tasks: '"{ruleName}" zu Meine Aufgaben hinzugefügt'
+    project: '"{ruleName}" zu diesem Projekt hinzugefügt'
+    project_template: '"{ruleName}" zu dieser Projektvorlage hinzugefügt'
 '**Duplicate this task to create a blog task. [...] [Template content c96abd6d10de655bdb44d40d2546e313]':
   author: ginoreyes
   comment: '[resource: asana_web_app_templates] Wird in von Asana erstellten Vorlagen verwendet - editorial_calendar'
@@ -61,7 +61,7 @@ dann den Workback-Zeitplan in den Teilaufgaben unten, um sie von einer Gelegenhe
     - asana2/asana/web/templates/generated_templates/editorial_calendar_business.ts
     - asana2/asana/web/templates/generated_templates/editorial_calendar_free.ts
     - asana2/asana/web/templates/generated_templates/editorial_calendar_premium.ts
-  value: '**Duplizieren Sie diese Aufgabe, um eine Blogaufgabe zu erstellen. Um eine Aufgabe zu duplizieren, gehen Sie zum Menü ''...'' und klicken Sie auf ''Aufgabe in Vorlage konvertieren''.** Füllen Sie 
+  value: '**Duplizieren Sie diese Aufgabe, um eine Blogaufgabe zu erstellen. Um eine Aufgabe zu duplizieren, gehen Sie zum Menü ''...'' und klicken Sie auf ''Aufgabe in Vorlage konvertieren''. "** Füllen Sie 
 
 
 dann die folgenden Informationen aus, um einen neuen Blog zu starten
@@ -81,14 +81,14 @@ Siehe die folgenden Unteraufgaben für einen vorgeschlagenen Workback-Zeitplan:'
     - asana2/luna-ui/src/components/widgets/hearts/heart_button_tooltip_anchor.ts
   variants:
     _default:
-      count_one: <div>Du</div> {listOfNames} ΓÇª and {count} other all {variant} this
-      count_other: <div>Du</div> {listOfNames} ΓÇª und {count} andere alle {variant} dies
+      count_one: <div>Du</div> {listOfNames} … and {count} other all {variant} this
+      count_other: <div>Du</div> {listOfNames} … und {count} weitere {variant} dies
     liked:
-      count_one: <div>Du</div> {listOfNames} ΓÇª and {count} other all liked this
-      count_other: <div>Du</div> {listOfNames} ΓÇª und {count} andere mochten dies alle
+      count_one: <div>Du</div> {listOfNames} … und {count} andere mochten dies
+      count_other: <div>Du</div> {listOfNames} … und {count} andere mochten dies alle
     '{heart}':
-      count_one: <div>Du</div> {listOfNames} ΓÇª and {count} other all {heart} this
-      count_other: <div>Du</div> {listOfNames} ΓÇª und {count} andere alle {heart} dies
+      count_one: <div>Du</div> {listOfNames} … und {count} andere alle {heart} dies
+      count_other: <div>Du</div> {listOfNames} … und {count} andere {heart} dies
 about-text:
   author: @Alex.......und schon wieder Hihi
   comment: Button-Text, max. 2 Wörter
@@ -96,4 +96,4 @@ about-text:
 about-tooltip:
   author: @Alex.......und schon wieder Hihi
   comment: Schaltfläche Tooltip, machen Sie es kurz
-  value: Hilfe zu diesen Anwendungen
+  value: Hilfe zu dieser Anwendung
