--- a/translationos.yml
+++ b/translationos.yml
@@ -3,7 +3,7 @@ on:
     - feature/**
     - fix*
 pull_requests:
-  mode: pr_all_langs
+  mode: pr_per_lang
 files:
   - translation: professional
     service_type: premium
