--- a/translationos.yml
+++ b/translationos.yml
@@ -9,7 +9,7 @@ files:
     service_type: premium
     source_pattern: src/res/*.yml
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}_{{lang_2}}.yml
+    target_pattern: src/res/{{original_file_namee}}_{{lang_2}}.yml
     target_locales: ['de-DE', 'it-IT', 'fr-FR', 'es-ES']
     preprocessing: true
   - translation: professional
