--- a/translationos.yml
+++ b/translationos.yml
@@ -3,7 +3,7 @@ on:
     - feature/**
     - fix*
 pull_requests:
-  mode: pr_per_lang
+  mode: pr_all_langs
 notification:
   enabled: true
   emails:
