--- a/translationos.yml
+++ b/translationos.yml
@@ -1,7 +1,6 @@
 on:
-  branches:
-    - feature/**
-    - fix*
+  tags:
+    - localization*
 pull_requests:
   mode: pr_all_langs
   automerge: merge
@@ -12,28 +11,8 @@ notification:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/*.yml
+    source_pattern: src/res/en-shrinked.yml
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}_{{lang_2}}.yml
     target_locales: ['de-DE', 'it-IT', 'fr-FR', 'es-ES']
-    preprocessing: true
-  - translation: professional
-    service_type: premium
-    source_pattern: src/res/!(*-*).json
-    source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}.json
-    target_locales: ['de-DE', 'qu-PE', 'et-ET', 'dd-EE']
-  - translation: professional
-    service_type: premium
-    source_pattern: src/res/!(*-*).md
-    source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}-{{language}}.md
-    target_locales: ['de-DE', 'qu-PE', 'fr-FR', 'ar-EG', 'ru-RU', 'dd-EE', 'gg-GG', 'es-ES']
-    preprocessing: true
-  - translation: professional
-    service_type: premium
-    source_pattern: src/res/!(*-*).docx
-    source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}-{{language}}.docx
-    target_locales: ['de-DE', 'it-IT']
     preprocessing: true
