--- a/translationos.yml
+++ b/translationos.yml
@@ -1,6 +1,7 @@
 on:
-  tags:
-    - localization*
+  branches:
+    - feature/**
+  wait_interval: 10s
 pull_requests:
   mode: pr_all_langs
 notification:
