--- a/translationos.yml
+++ b/translationos.yml
@@ -13,5 +13,5 @@ files:
     source_pattern: src/res/en-shrinked.yml
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}_{{lang_2}}.yml
-    target_locales: ['de-DE']
+    target_locales: ['de-DE', 'fr-FR', 'it-IT']
     preprocessing: true
