--- a/translationos.yml
+++ b/translationos.yml
@@ -10,7 +10,7 @@ notification:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/en-shrinked.yml
+    source_pattern: src/res/stringsclone.properties
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}_{{lang_2}}.yml
     target_locales: ['de-DE', 'fr-FR', 'it-IT']
